fix: schematic structure

--- a/Assignments/html-resume/index.html
+++ b/Assignments/html-resume/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Resume Page Assignment - Web Dev 2026</title>
 </head>
-
 <body>
     <!--Intro-->
     <section>
@@ -123,9 +123,9 @@
     <hr>
 
     <!--Footer-->
-    <section>
+    <footer>
         <p>&copy; 2024 John Doe. All rights reserved.</p>
-    </section>
+    </footer>
 
 </body>
 
