update: personal name added

--- a/Assignments/html-resume/index.html
+++ b/Assignments/html-resume/index.html
@@ -8,7 +8,7 @@
 <body>
     <!--Intro-->
     <section>
-        <h2>John Doe</h2>
+        <h2>Somnath Sahu</h2>
         <p>Full Stack Developer | Web Designer | Tech Enthusiast</p>
     </section>
     <hr>
