--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
         <!--logo-->
         <div>
-            <img src="../cursor-landing-html/assets/img/LOCKUP_HORIZONTAL_2D_DARK.png" alt="cursor image"
+            <img src="./assets/img/LOCKUP_HORIZONTAL_2D_DARK.png" alt="cursor image"
                 class="nav-logo">
         </div>
         <!--menu-->
