update: hero and client section

--- a/mintlify-clone/index.html
+++ b/mintlify-clone/index.html
@@ -1,13 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mintlify - Clone</title>
+    <link rel="shortcut icon" href="./assets/img/mintlify-icon.svg" type="image/svg">
     <!--Style css-->
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+    <!--navbar-->
+    <nav>
+        <div class="nav-items">
+            <div class="nav-logo">
+                <a href="#"> <img src="./assets/img/mintlify-wordmark.svg" alt="logo"></a>
+            </div>
+            <div class="nav-menu">
+                <ul>
+                    <li><a href="#">Resources</a></li>
+                    <li><a href="#">Documentation</a></li>
+                    <li><a href="#">Customers</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Pricing</a></li>
+                </ul>
+            </div>
+            <div class="nav-cta">
+                <a href="#" class="btn">Contact sales</a>
+                <a href="#" class="btn btn-primary">Start for free</a>
+            </div>
+        </div>
+    </nav>
+    <!--hero-->
+    <section id="hero">
+        <div class="hero">
+            <!-- <div class="img-bg">
+                <img src="./assets/img/bg-light.svg" alt="hero background">
+            </div> -->
+            <div class="hero-text-area">
+                <div class="hero-notice">
+                    <span class="hero-badge">NEW</span> Self-updating docs with agent suggestions
+                </div>
+                <div class="hero-content">
+                    <h2>The Intelligent Knowledge Platform</h2>
+                    <p>Turn your company's knowledge into accurate, agent-ready context</p>
+                </div>
+                <div class="hero-newsletter">
+                    <form>
+                        <input type="text" placeholder="Email address">
+                        <button type="submit" class="btn btn-primary">Start now</button>
+                    </form>
+                </div>
+                <div class="hero-product-image">
+                    <img src="./assets/img/hero-image-light.svg" alt="product image">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--trustedby-->
+    <section id="brands">
+        <div class="brands-list">
+            <div class="brand-img">
+                <img src="./assets/img/anthropic.png" alt="anthropic">
+            </div>
+            <div class="brand-img">
+                <img src="./assets/img/coinbase.png" alt="coinbase">
+            </div>
+            <div class="brand-img">
+                <img src="./assets/img/microsoft.png" alt="microsoft">
+            </div>
+            <div class="brand-img">
+                <img src="./assets/img/perplexity.png" alt="perplexity">
+            </div>
+            <div class="brand-img">
+                <img src="./assets/img/hubspot.png" alt="hubspot">
+            </div>
+            <div class="brand-img">
+                <img src="./assets/img/x.png" alt="x" width="48" height="48" style="width: 75px;">
+            </div>
+            <div class="brand-img">
+                <img src="./assets/img/paypal.png" alt="paypal">
+            </div>
+            <div class="brand-img">
+                <img src="./assets/img/lovable.png" alt="lovable">
+            </div>
+        </div>
+
+    </section>
+    <!--feature/intelligent section-->
+    <section>
+
+    </section>
+    <!--enterprise preview-->
+    <section>
+
+    </section>
+    <!--customer story-->
+    <section>
+
+    </section>
+    <!-- pricing/cta-->
+    <section>
+
+    </section>
+    <!--footer-->
+    <footer>
+
+    </footer>
 </body>
+
 </html>
